[package]
name = "uwthr"
version = "0.1.0"
authors = ["tomjones"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
dirs = "3.0.1"

[profile.release]
opt-level = 'z'  # Optimize for size.